Update StressTestUtils.java